--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Custom files to ignore on commit 
+appsettings.json
+
 # Created by https://www.toptal.com/developers/gitignore/api/aspnetcore,xamarinstudio,csharp,macos,windows,git,rider,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=aspnetcore,xamarinstudio,csharp,macos,windows,git,rider,visualstudio
 
