--- a/ShookMobile.iOS/ShookMobile.iOS.csproj
+++ b/ShookMobile.iOS/ShookMobile.iOS.csproj
@@ -5,13 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BB000720-8CAD-430B-BB1F-55498B932A8D}</ProjectGuid>
+    <ProjectGuid>{DEF8BD82-3067-4C75-90C4-BC8A2F65BBAD}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{6143fdea-f3c2-4a09-aafa-6e230626515e}</TemplateGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Shook.iOS</RootNamespace>
+    <RootNamespace>ShookMobile.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>Shook.iOS</AssemblyName>
+    <AssemblyName>ShookMobile.iOS</AssemblyName>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <ProvisioningType>automatic</ProvisioningType>
@@ -123,14 +123,14 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1269" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Shook\Shook.csproj">
-      <Project>{38ED05CC-F21B-4F2A-A04C-BB3E3B267E5E}</Project>
-      <Name>Shook</Name>
+    <ProjectReference Include="..\ShookMobile\ShookMobile.csproj">
+      <Project>{BC5E8402-F03D-4AD0-819F-E1080764D7FC}</Project>
+      <Name>ShookMobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
